# ic_system_

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
ic_system/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/api/debt/: admin.py  apps.py  models.py  tasks.py
src/config/: asgi.py  celery.py  settings.py  wsgi.py
src/debt/: apps.py  serializers.py  tasks.py  views.py
src/debt/migrations/: 0001_initial.py
src/students/: serializers.py  tandem.py  tests.py  views.py
